deploy: 42bdac592684f97cbeaff18f9b4d4fbf7acf4fa8

--- a/main/genindex.html
+++ b/main/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; dgbowl-schemas 123.dev1 documentation</title>
+  <title>Index &mdash; dgbowl-schemas 124rc1.dev1 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="_static/autodoc_pydantic.css" type="text/css" />
@@ -33,7 +33,7 @@
             dgbowl-schemas
           </a>
               <div class="version">
-                123.dev1
+                124rc1.dev1
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -2795,6 +2795,12 @@
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.ChromTrace.Params.species">(dgbowl_schemas.yadg.dataschema_4_2.step.ChromTrace.Params attribute)</a>
 </li>
       </ul></li>
+      <li><a href="apidoc/dgbowl_schemas.tomato.payload.html#dgbowl_schemas.tomato.payload.Task.start_with_task_name">start_with_task_name (dgbowl_schemas.tomato.payload.Task attribute)</a>
+
+      <ul>
+        <li><a href="apidoc/dgbowl_schemas.tomato.payload_2_1.html#dgbowl_schemas.tomato.payload_2_1.task.Task.start_with_task_name">(dgbowl_schemas.tomato.payload_2_1.task.Task attribute)</a>
+</li>
+      </ul></li>
       <li><a href="apidoc/dgbowl_schemas.yadg.dataschema.html#dgbowl_schemas.yadg.dataschema.DataSchema.step_defaults">step_defaults (dgbowl_schemas.yadg.dataschema.DataSchema attribute)</a>
 
       <ul>
@@ -2823,6 +2829,12 @@
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_5_1.html#dgbowl_schemas.yadg.dataschema_5_1.DataSchema.steps">(dgbowl_schemas.yadg.dataschema_5_1.DataSchema attribute)</a>
 </li>
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_6_0.html#dgbowl_schemas.yadg.dataschema_6_0.DataSchema.steps">(dgbowl_schemas.yadg.dataschema_6_0.DataSchema attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="apidoc/dgbowl_schemas.tomato.payload.html#dgbowl_schemas.tomato.payload.Task.stop_with_task_name">stop_with_task_name (dgbowl_schemas.tomato.payload.Task attribute)</a>
+
+      <ul>
+        <li><a href="apidoc/dgbowl_schemas.tomato.payload_2_1.html#dgbowl_schemas.tomato.payload_2_1.task.Task.stop_with_task_name">(dgbowl_schemas.tomato.payload_2_1.task.Task attribute)</a>
 </li>
       </ul></li>
       <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.BasicCSV.Params.strip">strip (dgbowl_schemas.yadg.dataschema_4_2.step.BasicCSV.Params attribute)</a>
@@ -2953,6 +2965,18 @@
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_5_1.html#dgbowl_schemas.yadg.dataschema_5_1.step.Step.tag">(dgbowl_schemas.yadg.dataschema_5_1.step.Step attribute)</a>
 </li>
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_6_0.html#dgbowl_schemas.yadg.dataschema_6_0.step.Step.tag">(dgbowl_schemas.yadg.dataschema_6_0.step.Step attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="apidoc/dgbowl_schemas.tomato.payload.html#dgbowl_schemas.tomato.payload.Task.task_name">task_name (dgbowl_schemas.tomato.payload.Task attribute)</a>
+
+      <ul>
+        <li><a href="apidoc/dgbowl_schemas.tomato.payload_2_1.html#dgbowl_schemas.tomato.payload_2_1.task.Task.task_name">(dgbowl_schemas.tomato.payload_2_1.task.Task attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="apidoc/dgbowl_schemas.tomato.payload.html#dgbowl_schemas.tomato.payload.Task.task_names_cannot_be_same">task_names_cannot_be_same() (dgbowl_schemas.tomato.payload.Task class method)</a>
+
+      <ul>
+        <li><a href="apidoc/dgbowl_schemas.tomato.payload_2_1.html#dgbowl_schemas.tomato.payload_2_1.task.Task.task_names_cannot_be_same">(dgbowl_schemas.tomato.payload_2_1.task.Task class method)</a>
 </li>
       </ul></li>
       <li><a href="apidoc/dgbowl_schemas.tomato.payload.html#dgbowl_schemas.tomato.payload.Task.task_params">task_params (dgbowl_schemas.tomato.payload.Task attribute)</a>
@@ -3341,6 +3365,12 @@
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="apidoc/dgbowl_schemas.tomato.payload.html#dgbowl_schemas.tomato.payload.Payload.validate_task_names">validate_task_names() (dgbowl_schemas.tomato.payload.Payload class method)</a>
+
+      <ul>
+        <li><a href="apidoc/dgbowl_schemas.tomato.payload_2_1.html#dgbowl_schemas.tomato.payload_2_1.Payload.validate_task_names">(dgbowl_schemas.tomato.payload_2_1.Payload class method)</a>
+</li>
+      </ul></li>
       <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.extract.Constant.value">value (dgbowl_schemas.dgpost.recipe_1_0.extract.Constant attribute)</a>
 
       <ul>
@@ -3509,7 +3539,7 @@
   <div class="rst-versions" data-toggle="rst-versions" role="note" aria-label="versions">
     <span class="rst-current-version" data-toggle="rst-current-version">
       <span class="fa fa-book"> Other Versions</span>
-      v: 123.dev1
+      v: 124rc1.dev1
       <span class="fa fa-caret-down"></span>
     </span>
     <div class="rst-other-versions"> 
