deploy: bada8721771105092398aa7a94fa5964442da5a1

--- a/main/genindex.html
+++ b/main/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; dgbowl-schemas 124rc1.dev1 documentation</title>
+  <title>Index &mdash; dgbowl-schemas 124rc2.dev1 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="_static/autodoc_pydantic.css" type="text/css" />
@@ -33,7 +33,7 @@
             dgbowl-schemas
           </a>
               <div class="version">
-                124rc1.dev1
+                124rc2.dev1
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -273,8 +273,6 @@
       </ul></li>
       <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.extract.Column">Column (class in dgbowl_schemas.dgpost.recipe_1_0.extract)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/dgbowl_schemas.dgpost.recipe.html#dgbowl_schemas.dgpost.recipe.Extract.columns">columns (dgbowl_schemas.dgpost.recipe.Extract attribute)</a>
 
       <ul>
@@ -291,6 +289,8 @@
         <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_2_1.html#dgbowl_schemas.dgpost.recipe_2_1.save.Save.columns">(dgbowl_schemas.dgpost.recipe_2_1.save.Save attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/dgbowl_schemas.tomato.payload.html#dgbowl_schemas.tomato.payload.Task.component_role">component_role (dgbowl_schemas.tomato.payload.Task attribute)</a>
 
       <ul>
@@ -345,6 +345,12 @@
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.FlowData.Params.convert">(dgbowl_schemas.yadg.dataschema_4_2.step.FlowData.Params attribute)</a>
 </li>
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_4_2.html#dgbowl_schemas.yadg.dataschema_4_2.step.MeasCSV.Params.convert">(dgbowl_schemas.yadg.dataschema_4_2.step.MeasCSV.Params attribute)</a>
+</li>
+      </ul></li>
+      <li><a href="apidoc/dgbowl_schemas.tomato.payload.html#dgbowl_schemas.tomato.payload.Task.convert_str_to_seconds">convert_str_to_seconds() (dgbowl_schemas.tomato.payload.Task class method)</a>
+
+      <ul>
+        <li><a href="apidoc/dgbowl_schemas.tomato.payload_2_1.html#dgbowl_schemas.tomato.payload_2_1.task.Task.convert_str_to_seconds">(dgbowl_schemas.tomato.payload_2_1.task.Task class method)</a>
 </li>
       </ul></li>
       <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params.cutoff">cutoff (dgbowl_schemas.yadg.dataschema_4_0.step.QFTrace.Params attribute)</a>
@@ -3539,7 +3545,7 @@
   <div class="rst-versions" data-toggle="rst-versions" role="note" aria-label="versions">
     <span class="rst-current-version" data-toggle="rst-current-version">
       <span class="fa fa-book"> Other Versions</span>
-      v: 124rc1.dev1
+      v: 124rc2.dev1
       <span class="fa fa-caret-down"></span>
     </span>
     <div class="rst-other-versions"> 
