deploy: d153e57843b679ec41f82d913678f307cf4f590f

--- a/main/genindex.html
+++ b/main/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; dgbowl-schemas 124.dev1 documentation</title>
+  <title>Index &mdash; dgbowl-schemas 124.dev2 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="_static/autodoc_pydantic.css" type="text/css" />
@@ -33,7 +33,7 @@
             dgbowl-schemas
           </a>
               <div class="version">
-                124.dev1
+                124.dev2
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -103,8 +103,6 @@
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="apidoc/dgbowl_schemas.tomato.payload_2_2.html#dgbowl_schemas.tomato.payload_2_2.user.User.api_key">api_key (dgbowl_schemas.tomato.payload_2_2.user.User attribute)</a>
-</li>
       <li><a href="apidoc/dgbowl_schemas.dgpost.recipe.html#dgbowl_schemas.dgpost.recipe.Load.as_">as_ (dgbowl_schemas.dgpost.recipe.Load attribute)</a>
 
       <ul>
@@ -1149,8 +1147,6 @@
         <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_6_0.html#dgbowl_schemas.yadg.dataschema_6_0.stepdefaults.StepDefaults.encoding">(dgbowl_schemas.yadg.dataschema_6_0.stepdefaults.StepDefaults attribute)</a>
 </li>
       </ul></li>
-      <li><a href="apidoc/dgbowl_schemas.tomato.payload_2_2.html#dgbowl_schemas.tomato.payload_2_2.settings.Settings.Output.endpoint">endpoint (dgbowl_schemas.tomato.payload_2_2.settings.Settings.Output attribute)</a>
-</li>
       <li><a href="apidoc/dgbowl_schemas.yadg.dataschema_4_0.html#dgbowl_schemas.yadg.dataschema_4_0.input.Input.exclude">exclude (dgbowl_schemas.yadg.dataschema_4_0.input.Input attribute)</a>
 
       <ul>
@@ -2736,6 +2732,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.Recipe">Recipe (class in dgbowl_schemas.dgpost.recipe_1_0)</a>
 </li>
+      <li><a href="apidoc/dgbowl_schemas.tomato.payload_2_2.html#dgbowl_schemas.tomato.payload_2_2.settings.Settings.Output.repository">repository (dgbowl_schemas.tomato.payload_2_2.settings.Settings.Output attribute)</a>
+</li>
       <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.plot.AxArgs.rows">rows (dgbowl_schemas.dgpost.recipe_1_0.plot.AxArgs attribute)</a>
 
       <ul>
@@ -3664,7 +3662,7 @@
   <div class="rst-versions" data-toggle="rst-versions" role="note" aria-label="versions">
     <span class="rst-current-version" data-toggle="rst-current-version">
       <span class="fa fa-book"> Other Versions</span>
-      v: 124.dev1
+      v: 124.dev2
       <span class="fa fa-caret-down"></span>
     </span>
     <div class="rst-other-versions"> 
