deploy: e0108cae07959d52a2055c109e08fb33ed218bcf

--- a/main/genindex.html
+++ b/main/genindex.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index &mdash; dgbowl-schemas 124.dev2 documentation</title>
+  <title>Index &mdash; dgbowl-schemas 124.dev3 documentation</title>
       <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
       <link rel="stylesheet" href="_static/css/theme.css" type="text/css" />
       <link rel="stylesheet" href="_static/autodoc_pydantic.css" type="text/css" />
@@ -33,7 +33,7 @@
             dgbowl-schemas
           </a>
               <div class="version">
-                124.dev2
+                124.dev3
               </div>
 <div role="search">
   <form id="rtd-search-form" class="wy-form" action="search.html" method="get">
@@ -2732,7 +2732,7 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.Recipe">Recipe (class in dgbowl_schemas.dgpost.recipe_1_0)</a>
 </li>
-      <li><a href="apidoc/dgbowl_schemas.tomato.payload_2_2.html#dgbowl_schemas.tomato.payload_2_2.settings.Settings.Output.repository">repository (dgbowl_schemas.tomato.payload_2_2.settings.Settings.Output attribute)</a>
+      <li><a href="apidoc/dgbowl_schemas.tomato.payload_2_2.html#dgbowl_schemas.tomato.payload_2_2.settings.Settings.Output.repositories">repositories (dgbowl_schemas.tomato.payload_2_2.settings.Settings.Output attribute)</a>
 </li>
       <li><a href="apidoc/dgbowl_schemas.dgpost.recipe_1_0.html#dgbowl_schemas.dgpost.recipe_1_0.plot.AxArgs.rows">rows (dgbowl_schemas.dgpost.recipe_1_0.plot.AxArgs attribute)</a>
 
@@ -3662,7 +3662,7 @@
   <div class="rst-versions" data-toggle="rst-versions" role="note" aria-label="versions">
     <span class="rst-current-version" data-toggle="rst-current-version">
       <span class="fa fa-book"> Other Versions</span>
-      v: 124.dev2
+      v: 124.dev3
       <span class="fa fa-caret-down"></span>
     </span>
     <div class="rst-other-versions"> 
